--- a/views/about/schooltopic.html
+++ b/views/about/schooltopic.html
@@ -260,7 +260,7 @@
 
 {% include "widget/new_footer/common_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_PROFILE_SEAT10",helper) }}
+{{slide.leyu_slide("AD_SCHOOLTOPIC_SEAT10",helper) }}
 
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
