--- a/views/about/schooltopic.html
+++ b/views/about/schooltopic.html
@@ -123,7 +123,7 @@
 
 </style>
 <script>
-  var AD_PAGE_NAME = "PROFILE";
+  var AD_PAGE_NAME = "SCHOOLTOPIC";
 </script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <body style="background: #f5f5f5;">
