解决专题id重名

--- a/views/about/schooltopic.html
+++ b/views/about/schooltopic.html
@@ -264,8 +264,9 @@
 
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/dep/js/schooltopic/index.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/schooltopic/jquery.bxslider.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/schooltopic/Newform123.js"></script>
