--- a/views/widget/online_evaluation/online_evaluation.html
+++ b/views/widget/online_evaluation/online_evaluation.html
@@ -79,7 +79,7 @@
 					<div class="leaveField clearfix">
 						<div class="title">所属区域：</div>
 						<div class="text1">
-							<select id="city" name="city" style="overflow-y:auto;size: 10;">
+							<select id="slide-area" name="slide-area" style="overflow-y:auto;size: 10;">
 								<option value="1">(B)北京金吉列</option>
 								<option value="7">(C)重庆金吉列</option>
 								<option value="5">(C)成都金吉列</option>
