--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -38,12 +38,7 @@
 	<div class="lx-head">
 		<h1>{{floor.country_name}}留学</h1>
 		<ul class="lx-tabitems">
-			{% for tagitem in floor.list %}
-				{% if loop.index == 1 %}
-				<li class="active">{{tagitem.edu_name}}<em></em></li>
-				{% else %}
-				<li>{{tagitem.edu_name}}<em></em></li>
-				{% endif %}
+			{% for tagitem in floor.list %}{% if loop.index == 1 %}<li class="active">{{tagitem.edu_name}}<em></em></li>{% else %}<li>{{tagitem.edu_name}}<em></em></li>{% endif %}
 			{% endfor %}
 		</ul>
 		<a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id)}}" target="_blank" class="enter">进入专区&nbsp;&nbsp;></a>
@@ -51,43 +46,8 @@
 	{% for type in  floor.list %}{#类别#}
 	<div class="lx-groupitems" {% if loop.index == 1 %} style="display:block;" {% else %} style="display:none;" {% endif %}><!--推荐-->
 		{% for line in type.list %} {#行数#}
-			{% if loop.index == 1 %} {#第一行#}
-				<ul class="gw-items gw-topitems" id="guItems">
-					{% for item in line %}
-					{% if item.uid != null %}
-					<li>
-						<div class="gw-people">
-							<a target="_blank" href="{{helper.urlgen(item.uid | string)}}" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}});background-size:cover"></a>
-							<span class="pepple-icon">{{item.user_info.realname}}<i></i></span>
-						</div>
-						{#<p>{{item.type}}</p>#}
-						<a target="_blank" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">
-							<div class="gw-legend gw-news">留学时讯</div>
-							<p style="clear:both">{{ item.title | ellipsis(21) }}</p>
-						</a>
-					</li>
-					{% endif %}
-					{% endfor %}
-					<em class="triangle"></em>
-				</ul>
-			{% else %}
-				<ul class="gw-items">
-						{% for item in line %}
-							{% if item.uid != null %}
-							<li class="gw-newslist">
-								<div class="gw-people">
-									<a target="_blank" href="{{helper.urlgen(item.uid|string)}}" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}});background-size:cover;"></a>
-									<span class="pepple-icon"><em>{{item.user_info.realname}}</em><i></i></span>
-								</div>
-								{#<p>{{item.type}}</p>#}
-								<a target="_blank" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">
-									<div class="gw-legend">{{item.tag_list | ellipsis(14)}}</div>
-									<p style="clear:both">{{item.title | ellipsis(21)}}</p>
-								</a>
-							</li>
-							{% endif %}
-						{% endfor %}
-				</ul>
+			{% if loop.index == 1 %} {#第一行#}<ul class="gw-items gw-topitems" id="guItems">	{% for item in line %}	{% if item.uid != null %}	<li>		<div class="gw-people">			<a target="_blank" href="{{helper.urlgen(item.uid | string)}}" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}});background-size:cover"></a>			<span class="pepple-icon">{{item.user_info.realname}}<i></i></span>		</div>		{#<p>{{item.type}}</p>#}		<a target="_blank" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">			<div class="gw-legend gw-news">留学时讯</div>			<p style="clear:both">{{ item.title | ellipsis(21) }}</p>		</a>	</li>	{% endif %}	{% endfor %}	<em class="triangle"></em></ul>
+			{% else %}<ul class="gw-items">		{% for item in line %}			{% if item.uid != null %}			<li class="gw-newslist">				<div class="gw-people">					<a target="_blank" href="{{helper.urlgen(item.uid|string)}}" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}});background-size:cover;"></a>					<span class="pepple-icon"><em>{{item.user_info.realname}}</em><i></i></span>				</div>				{#<p>{{item.type}}</p>#}				<a target="_blank" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">					<div class="gw-legend">{{item.tag_list | ellipsis(14)}}</div>					<p style="clear:both">{{item.title | ellipsis(21)}}</p>				</a>			</li>			{% endif %}		{% endfor %}</ul>
 			{% endif %}
 		{% endfor %}
 	</div>
