--- a/views/login/login.html
+++ b/views/login/login.html
@@ -42,9 +42,10 @@
 
   <div class="login_overseas clearfix">
     
-    <div style="margin: 0px auto;height: 550px;width: 100%;">{#background: url({{helper.cdnhost}}/assets/img/login_background.png) no-repeat;background-size: cover;#}
-      <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;display:block;overflow:hidden;"/>
-    
+    <div style="margin: 0px auto;height: 550px;width: 100%;background: url({{helper.cdnhost}}/assets/img/login_background.png) no-repeat;background-size: cover;">{##}
+      {# <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;display:block;overflow:hidden;"/> #}
+
+    </div>
     
     <div class="login_content">
       <div class="login_nei text-center loginscreen  animated fadeInDown" style="text-align: left;height: 280px;">
@@ -91,11 +92,6 @@
         </div> -->
       </div>
     </div>
-    
-    
-    </div>
-    
-    
     <div class="login_footer">
       <div id="login_data">{{login_ss}}</div>
       ©2009 金吉列出国留学咨询服务有限公司 版权所有 京ICP备05010035号&nbsp;&nbsp;&nbsp;&nbsp;留学投诉电话4006-213-315&nbsp;&nbsp;&nbsp;&nbsp;投诉邮箱：315@jjl.cn
