--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -43,10 +43,11 @@
 
   <div class="login_overseas clearfix">
     
-    <div style="margin: 0px auto;height: 550px;width: 100%;">{#background: url({{helper.cdnhost}}/assets/img/login_background.png);
-    background-repeat: no-repeat;background-size: cover; #}
-      <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;display:block;overflow:hidden;"/>
+    <div style="margin: 0px auto;height: 550px;width: 100%;background: url({{helper.cdnhost}}/assets/img/login_background.png);
+    background-repeat: no-repeat;background-size: cover;">{# #}
+      {# <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;display:block;overflow:hidden;"/> #}
     
+    </div>
     <div class="login_content">
       <div class="login_nei text-center loginscreen  animated fadeInDown" style="text-align: left">
         <h3 class="login_nei_title">验证码登录<!--<a target="_blank"  href="{{helper.urlgen('register')}}">注册一个新账号</a>--></h3>
@@ -113,10 +114,6 @@
 
       </div>
     </div>
-    
-    
-    </div>
-    
     
     <div class="login_footer">
       <div id="login_data">{{login_ss}}</div>
