修改本科火狐样式

--- a/views/release_article.html
+++ b/views/release_article.html
@@ -103,7 +103,7 @@
                 <i class="level-sel-i iconfont"></i>
                 <i>中学</i>
               </span>
-              <span class="level-sel iconfont">
+              <span class="level-sel">
                 <i class="level-sel-i iconfont"></i>
                 <i>本科</i>
               </span>
