--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -231,7 +231,7 @@
   </a>
   <div class="adviser-info" >
     <div class="adviser-info-name" style="font-size: 14px" >
-      <a target="_blank" href="{{helper.urlgen(item.id | string)}}" style="color: #333">{{item.user_info.realname}}</a>
+      <a target="_blank" href="{{helper.urlgen(item.uid | string)}}" style="color: #333">{{item.user_info.realname}}</a>
     </div>
     <div class="adviser-info-date clearfix" >
       <span class="adviser-info-date-s" style="color: #666;line-height: 20px;">{{item.add_time}}</span>
