--- a/views/agreement.html
+++ b/views/agreement.html
@@ -183,6 +183,6 @@
 </div>
 {% include "widget/new_footer/new_footer.html" %}
 </body>
-<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav_liuxue_search.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 </html>
