--- a/views/user_information.html
+++ b/views/user_information.html
@@ -210,6 +210,15 @@
       $('#nicheng').data("toogle", "left").data("placement", "right").data("container", "body").data("content", '昵称不能为空').popover({"trigger":"manual"}).popover("show");
       return
     }
+    console.log('username', $('#username').val().length)
+    if ($('#username').val().length > 10) {
+      layer.msg('姓名请输入10个字以内');
+      return
+    }
+    if ($('#nicheng').val().length > 10) {
+      layer.msg('昵称请输入10个字以内');
+      return
+    }
     if ($('#username').val() !== '' && $('#nicheng').val() !== '') {
       $.ajax({
         url: '/soapi/user_info',
