--- a/views/widget/new_nav_first/new_nav_red.html
+++ b/views/widget/new_nav_first/new_nav_red.html
@@ -10,8 +10,8 @@
             <li style="width: 118px;" class="active"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
         </ul>
         <div class="nav-right">
-            <div class="new-city">
-                <div class="citynames"><i class="iconfont icon-top">&#xe628;</i>
+            <div class="new-city" id="new-city">
+                <div class="citynames" id="city-name-box"><i class="iconfont icon-top">&#xe628;</i>
                     <span class="cityname" id="city-on">北京</span>
                     <i class="city-icon iconfont">&#xe60b;</i>
                 </div>
