--- a/views/widget/top/top_login.html
+++ b/views/widget/top/top_login.html
@@ -251,7 +251,7 @@ input[type="checkbox"] {
                 '<div class="top-con-right">'+
                 '<span><a target="_blank" id="getloginUser" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
                 '<span class="bor"></span>'+
-                '<span><a href="javascript:void(0);" id="getlogin" id="getloginUser" class="dui-text-warning-ss" rel="nofollow">登录</a></span>'+
+                '<span><a href="javascript:void(0);" id="getloginUser_deng" class="dui-text-warning-ss" rel="nofollow">登录</a></span>'+
                 '</div>'+
                 '</div>'
       $(".top").append(val);
@@ -286,6 +286,13 @@ input[type="checkbox"] {
 
     $("form").Vaild();
     //登录
+
+    var pac_d = document.getElementById('getloginUser_deng');
+    if (pac_d.addEventListener) {
+      pac_d.addEventListener('click', loginUser, false)
+    }else {
+      pac_d.attachEvent('onclick', loginUser, false)
+    }
     var pac = document.getElementById('getloginUser');
     if (pac.addEventListener) {
       pac.addEventListener('click', loginUser, false)
