--- a/views/widget2/comment/comment.html
+++ b/views/widget2/comment/comment.html
@@ -102,96 +102,102 @@
       del(this,1)
     });
 
-  	$("#commentBtn").click(function(){
-  	    //文章评论
-  	    if( login_ss == undefined){
-  	      getlogin();
-  	      return false;
-  	    }
-  	    if(login_ss.uid ==adviserId){
-  	      layer.msg('你不能评论自己的文章')
-  	      $("#saytext").val(null);
-  	      return false;
-  	    } 
-  			var str =$.trim($("#saytext").val());
-  	    if(str ==''){
-  	      layer.msg('请输入评论内容')
-  	      return false;
-  	    }
-  	    $.ajax({
-  	      url: '/soapi/reviewArticle',
-  	      type:'POST',
-  	      data:{
-  	      	article_id:article_id,
-  	        message:str,
-  	        u_id:login_ss.uid
-  	      },
-  	      dataType:'jsonp',
-  	      jsonpCallback:'cb',
-  	      success:function(result){
-  	       console.log(result)
-  	        if(result.code == 0){
-  	          layer.msg('评论成功')   
-              var vHtml = '';
-              if(login_ss.usertype ==2){
-                vHtml = '<i class="adviser-v-i"></i>';
+  	var commontFlag = true;
+    $("#commentBtn").on('click',function(){
+        //文章评论
+        if(commontFlag){
+          if( login_ss == undefined){
+            getlogin();
+            return false;
+          }
+          if(login_ss.uid ==adviserId){
+            layer.msg('你不能评论自己的文章')
+            $("#saytext").val(null);
+            return false;
+          } 
+          var str =$.trim($("#saytext").val());
+          if(str ==''){
+            layer.msg('请输入评论内容')
+            return false;
+          }
+          $.ajax({
+            url: '/soapi/reviewArticle',
+            type:'POST',
+            data:{
+              article_id:article_id,
+              message:str,
+              u_id:login_ss.uid
+            },
+            dataType:'jsonp',
+            jsonpCallback:'cb',
+            success:function(result){
+              commontFlag = true;
+              console.log(result)
+              if(result.code == 0){
+                layer.msg('评论成功')   
+                var vHtml = '';
+                if(login_ss.usertype ==2){
+                  vHtml = '<i class="adviser-v-i"></i>';
+                }
+                var html ='<div class="comment-list clearfix" >'+
+                             '<div class="comment-head" style="background:url('+fn.avaterimg(login_ss.uid,'small',0,login_ss.version)+') no-repeat 0 0;background-size:cover;" >'+
+                             '</div>'+
+                             '<div class="comment-info" >'+
+                               '<div  class="comment-info-name-box">'+
+                                  '<span class="comment-info-name">'+ 
+                                  result.data.comment_id.nickname +vHtml+
+                                  '</span>'+
+                                  '<span class="comment-info-time">'+
+                                   moment.unix(result.data.time).format('YYYY年MM月D日 HH:mm') +
+                                  '</span>'+
+                                '</div>'+
+                                '<p class="comment-info-txt" >'+ 
+                                 replace_em(str) + 
+                                '</p>'+
+                                '<div class="comment-btn-bar" >'+
+                                  '<span class="fabulous">'+
+                                    '<i class="iconfont" >&#xe604;</i>点赞'+
+                                  '</span>'+
+                                  '<span data-commentId="'+result.data.comment_id.comment_id+'"  onclick="reply1(this)">'+
+                                    '<i class="iconfont" >&#xe601;</i>回复'+
+                                  '</span>'+
+                                  '<span class="report-btn" onclick="report(this,2)">'+
+                                    '<i class="iconfont" >&#xe629;</i>举报'+
+                                  '</span>'+
+                                '</div>'+
+                                '<div class="reply-box" >'+
+                                  '<textarea class="reply-text" maxlength="250"></textarea>'+
+                                  '<div class="clearfix emotion-box" style="margin-top: 10px;">'+
+                                    '<span class="emotion"></span>'+
+                                    '<a  href="javascript:void(0);" class="dui-btn btn-xlarge btn-consult_ylw sub-btn1" data-commentId = "'+result.data.comment_id.comment_id+'" data-uid ="'+login_ss.uid+'" onclick="replyComment1(this)">评论</a>'+
+                                  '</div>'+
+                                '</div>'+
+                                '<div class="reply-list" ></div>'+
+                              '</div>'+
+                          '</div>';
+                $("#saytext").val(null);
+                $("#word-num").html(500);
+                $(".comment-list-box").prepend(html);
+                $('.emotion').qqFace({ 
+                  path:ajaxUrlPrefix.cdnhost+'/assets/img/gif/' //表情存放的路径
+                });
+                
+                $(".fabulous").on("click",function(){
+                  //点赞
+                  layer.msg('不能对自己发表的内容进行投票')
+                });  
+              }else{
+                layer.msg(result.err)
               }
-  	          var html ='<div class="comment-list clearfix" >'+
-  	                       '<div class="comment-head" style="background:url('+fn.avaterimg(login_ss.uid,'small',0,login_ss.version)+') no-repeat 0 0;background-size:cover;" >'+
-  	                       '</div>'+
-  	                       '<div class="comment-info" >'+
-  	                         '<div  class="comment-info-name-box">'+
-  	                            '<span class="comment-info-name">'+ 
-  	                            result.data.comment_id.nickname +vHtml+
-  	                            '</span>'+
-  	                            '<span class="comment-info-time">'+
-  	                             moment.unix(result.data.time).format('YYYY年MM月D日 HH:mm') +
-  	                            '</span>'+
-  	                          '</div>'+
-  	                          '<p class="comment-info-txt" >'+ 
-  	                           replace_em(str) + 
-  	                          '</p>'+
-  	                          '<div class="comment-btn-bar" >'+
-  	                            '<span class="fabulous">'+
-  	                              '<i class="iconfont" >&#xe604;</i>点赞'+
-  	                            '</span>'+
-  	                            '<span data-commentId="'+result.data.comment_id.comment_id+'"  onclick="reply1(this)">'+
-  	                              '<i class="iconfont" >&#xe601;</i>回复'+
-  	                            '</span>'+
-  	                            '<span class="report-btn" onclick="report(this,2)">'+
-  	                              '<i class="iconfont" >&#xe629;</i>举报'+
-  	                            '</span>'+
-  	                          '</div>'+
-  	                          '<div class="reply-box" >'+
-  	                            '<textarea class="reply-text" maxlength="250"></textarea>'+
-  	                            '<div class="clearfix emotion-box" style="margin-top: 10px;">'+
-  	                              '<span class="emotion"></span>'+
-  	                              '<a  href="javascript:void(0);" class="dui-btn btn-xlarge btn-consult_ylw sub-btn1" data-commentId = "'+result.data.comment_id.comment_id+'" data-uid ="'+login_ss.uid+'" onclick="replyComment1(this)">评论</a>'+
-  	                            '</div>'+
-  	                          '</div>'+
-  	                          '<div class="reply-list" ></div>'+
-  	                        '</div>'+
-  	                    '</div>';
-  	          $("#saytext").val(null);
-              $("#word-num").html(500);
-  	          $(".comment-list-box").prepend(html);
-  	          $('.emotion').qqFace({ 
-  	            path:ajaxUrlPrefix.cdnhost+'/assets/img/gif/' //表情存放的路径
-  	          });
-  	          
-  	          $(".fabulous").on("click",function(){
-  	            //点赞
-  	            layer.msg('不能对自己发表的内容进行投票')
-  	          });  
-  	        }else{
-  	          layer.msg(result.err)
-  	        }
-  	      },
-  	      error:function(XMLHttpRequest, textStatus, errorThrown){
-  	        console.log(errorThrown)
-  	      }
-  	    });
-  	});
+            },
+            error:function(XMLHttpRequest, textStatus, errorThrown){
+              commontFlag = true;
+              console.log(errorThrown)
+            }
+          });
+        }
+        commontFlag =false;
+    });
     var commentPage = 1;
     $(".load-more").on("click",function(){
 	    //点击加载更多
