--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -3,7 +3,6 @@
 {% include "header_new.html" %}
 
   <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/widget/nav_login.css"/>
-  <link rel="stylesheet" href="{{helper.cdnhost}}/assets/css/custom.css"/>
   
   <script src="{{helper.cdnhost}}/assets/js/bootstrap.min.js?v=3.3.6"></script>
   <script src="{{helper.cdnhost}}/assets/js/Bootstrap_popover.js"></script>
@@ -43,9 +42,9 @@
 
   <div class="login_overseas clearfix">
     
-    <div style="margin: 0px auto;height: 550px;width: 100%;">{#background: url({{helper.cdnhost}}/assets/img/login_background.png);
-    background-repeat: no-repeat;background-size: cover; #}
-      <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;display:block;overflow:hidden;"/>
+    <div style="margin: 0px auto;height: 550px;width: 100%;background: url({{helper.cdnhost}}/assets/img/login_background.png);
+    background-repeat: no-repeat;background-size: cover;">{# #}
+      {# <img src="{{helper.cdnhost}}/assets/img/login_background.png" alt="" style="width: 100%;height: 550px;display:block;overflow:hidden;"/> #}
     </div>
     
     <div class="login_content">
@@ -103,12 +102,12 @@
         <div class="fen" style="margin-top: -5px;">
           <h4 style="line-height: 37px;">第三方快速登录：</h4>
           <div class="bdsharebuttonbox" id="fx" style="float: left;margin-top: 7px">
-            <img src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo_user" style="float: left;"/>
+            <img src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo_user" style="float: left;" data-url="url"/>
 
             <a target="_blank"  href="{{helper.wwhost}}/weixin_login?h={{url}}" style="float: left;">
               <img src="{{helper.cdnhost}}/assets/img/weixin_login.png" alt=""/>
             </a>
-            <img src="{{helper.cdnhost}}/assets/img/QQ_login.png" alt="" id="qq_user" style="float: left;"/>
+            <img src="{{helper.cdnhost}}/assets/img/QQ_login.png" alt="" id="qq_user" style="float: left;" data-url="url"/>
           </div>
         </div>
 
@@ -177,15 +176,16 @@
     }
 
     $('#weibo_user').on('click', function () {
-      var h = window.location.href;//获取全部的url
-      console.log('h', h);
-      var hh = h.split("?");
-      console.log('hh', hh[1])
-      if (hh[1] !== undefined) {
-        var str = hh[1].substr(1);
-        var strs = str.split("=");
-        console.log('strs', strs)
-        var A = window.open(js_api_config.wwhost+ "/sina_login?h=" + strs[1], "TencentLogin", "width=450,height=320,menubar=0,scrollbars=1,resizable=1,status=1,titlebar=0,toolbar=0,location=1");
+      var url = $(this).attr('data-url')
+      //var h = window.location.href;//获取全部的url
+      //console.log('h', h);
+      //var hh = h.split("?");
+      //console.log('hh', hh[1])
+      if (url !== undefined) {
+        //var str = hh[1].substr(1);
+        //var strs = str.split("=");
+        //console.log('strs', strs)
+        var A = window.open(js_api_config.wwhost+ "/sina_login?h=" + url, "TencentLogin", "width=450,height=320,menubar=0,scrollbars=1,resizable=1,status=1,titlebar=0,toolbar=0,location=1");
       } else {
         var A = window.open(js_api_config.wwhost+ "/sina_login?h=" + js_api_config.wwhost, "TencentLogin", "width=450,height=320,menubar=0,scrollbars=1,resizable=1,status=1,titlebar=0,toolbar=0,location=1");
       }
@@ -193,15 +193,16 @@
     $('#qq_user').on('click', function () {
     //以下为按钮点击事件的逻辑。注意这里要重新打开窗口
     //否则后面跳转到QQ登录，授权页面时会直接缩小当前浏览器的窗口，而不是打开新窗口
-      var h = window.location.href;//获取全部的url
-      console.log('h', h);
-      var hh = h.split("?");
-      console.log('hh', hh)
-      if (hh[1] !== undefined) {
-        var str = hh[1].substr(1);
-        var strs = str.split("=");
-        console.log('strs', strs)
-        var A = window.open(js_api_config.wwhost+"/qq_login?h=" + strs[1], "TencentLogin", "width=695,height=475,menubar=0,scrollbars=1,resizable=1,status=1,titlebar=0,toolbar=0,location=1");
+      var url = $(this).attr('data-url')
+      //var h = window.location.href;//获取全部的url
+      //console.log('h', h);
+      //var hh = h.split("?");
+      //console.log('hh', hh)
+      if (url !== undefined) {
+        //var str = hh[1].substr(1);
+        //var strs = str.split("=");
+        //console.log('strs', strs)
+        var A = window.open(js_api_config.wwhost+"/qq_login?h=" + url, "TencentLogin", "width=695,height=475,menubar=0,scrollbars=1,resizable=1,status=1,titlebar=0,toolbar=0,location=1");
       } else {
         var A = window.open(js_api_config.wwhost+"/qq_login?h=" + js_api_config.wwhost, "TencentLogin", "width=450,height=320,menubar=0,scrollbars=1,resizable=1,status=1,titlebar=0,toolbar=0,location=1");
       }
