修改登录点击

--- a/views/widget/top/top_liuxue.html
+++ b/views/widget/top/top_liuxue.html
@@ -261,7 +261,7 @@ input[type="checkbox"] {
                 '<div class="top-con-right">'+
                 '<span><a target="_blank" id="getloginUser" class="dui-text-warning-ss" rel="nofollow">注册</a></span>'+
                 '<span class="bor"></span>'+
-                '<span ><a href="javascript:void(0);" style="background: #fff;" onclick="id="getloginUser_deng"" class="dui-text-warning-ss" rel="nofollow">登录</a></span>'+
+                '<span ><a href="javascript:void(0);" style="background: #fff;" id="getloginUser_deng" class="dui-text-warning-ss" rel="nofollow">登录</a></span>'+
                 '<span class="bor">|</span>'+
                 '<span class="top_weibo_img"><img id="weixin" src="{{helper.cdnhost}}/assets/img/top_weixin.png"/></span>'+
                 '<span id="weixin_" class="top_weibo" style="background: url('+ajaxUrlPrefix.cdnhost+'/assets/img/top_liuxue_weixin.png);display: none;"></span>'+
