活动底页侧栏引入传参

--- a/views/about/activity_detail.html
+++ b/views/about/activity_detail.html
@@ -175,7 +175,7 @@
 
 {% include "widget/new_footer/new_footer.html" %}
 {% import "widget/new_slide/new_slide.html" as  slide %}
-{{slide.leyu_slide("AD_ACTIVITYDETAIL_SEAT10") }}
+{{slide.leyu_slide("AD_ACTIVITYDETAIL_SEAT10",helper) }}
 
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js"></script>-->
 <script src="{{helper.cdnhost}}/assets/js/nav_liuxue_search.js"></script>
