--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -102,12 +102,12 @@
         <div class="fen" style="margin-top: -5px;">
           <h4 style="line-height: 37px;">第三方快速登录：</h4>
           <div class="bdsharebuttonbox" id="fx" style="float: left;margin-top: 7px">
-            <img src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo_user" style="float: left;" data-url="url"/>
+            <img src="{{helper.cdnhost}}/assets/img/weibo_login.png" alt="" id="weibo_user" style="float: left;" data-url="{{url}}"/>
 
             <a target="_blank"  href="{{helper.wwhost}}/weixin_login?h={{url}}" style="float: left;">
               <img src="{{helper.cdnhost}}/assets/img/weixin_login.png" alt=""/>
             </a>
-            <img src="{{helper.cdnhost}}/assets/img/QQ_login.png" alt="" id="qq_user" style="float: left;" data-url="url"/>
+            <img src="{{helper.cdnhost}}/assets/img/QQ_login.png" alt="" id="qq_user" style="float: left;" data-url="{{url}}"/>
           </div>
         </div>
 
