--- a/views/widget/xSlider/xSlider2.html
+++ b/views/widget/xSlider/xSlider2.html
@@ -1,12 +1,4 @@
 {% if xSlider2.length ==1 %}
-<style>
-  .slider:hover .slider-btn{
-    display: none;
-  }
-  .slider-img-ul{
-    left: 0!important;
-  }
-</style>
 <div class="slider">
   <div class="slider-img">
     <ul class="slider-img-ul">
@@ -18,6 +10,7 @@
     </ul>
   </div>
 </div>
+{% elif xSlider2.length ==0 %}
 {% else%}
 <div class="slider">
         <div class="slider-img">
