--- a/views/index.html
+++ b/views/index.html
@@ -355,6 +355,8 @@
     </div>
   </div>
   {% include "widget/liuxue_item/liuxue_item.html" %}
+  ddddddddd
+  {% include "widget/liuxue_item/liuxue_item_nunjucks.html" %}
 </div>
 {% include "widget/online_evaluation/online_consultation.html" %}
 {% include "widget/new_footer/new_footer.html" %}
