首页ajax请求学历对应数据

--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -105,32 +105,34 @@
 		cur_area = $.cookie('currentarea');
 	}
 	$(".lxContaniner").on('click', '.lx-tabitems li', function(){
-		var cur_index=$(this).index();
+//		var cur_index=$(this).index();
 		var cur_edu_id = $(this).attr('data-edu_id');
 		var cur_country_id = $(this).parents('.lx-tabitems').attr('data-country_id');
+		var cur_groupitems = $(this).parents(".lxContaniner").find('.lx-groupitems');
 		$.ajax({
-			url: '/ucapi/ucapi_agent',
+			url: '/liuxue_item_nunjucks',
 			type:'get',
 			data:{
 				"city_id": cur_area,
 				"country_id":cur_country_id,
 				"edu_id":cur_edu_id
 			},
-			dataType:'json',
 			success:function(msg){
+				cur_groupitems.remove();
+				$('.lxContaniner').append($(msg));
 				console.log(msg);
-				if(msg.code === 0){
+				/*if(msg.code === 0){
 					customize(u_name, u_phone, u_country, u_email);
 				} else {
 					alert(msg.message);
-				}
+				}*/
 			},
 			error:function(XMLHttpRequest, textStatus, errorThrown){
 				console.log("获取失败，请重试！CODE:"+XMLHttpRequest.status)
 			}
 		})
 		$(this).addClass('active').siblings().removeClass('active')
-		$(this).parents(".lxContaniner").find('.lx-groupitems').hide().eq(cur_index).show();
+//		$(this).parents(".lxContaniner").find('.lx-groupitems').hide().eq(cur_index).show();
 	})
 </script>
 
