--- a/views/widget/liuxue_item/liuxue_item_nunjucks.html
+++ b/views/widget/liuxue_item/liuxue_item_nunjucks.html
@@ -1,42 +1,5 @@
-<style type="text/css">
-  .lxContaniner{margin-top:30px;width:1200px;overflow: hidden;margin-left: auto;margin-right: auto;}
-  .lx-head{margin-bottom:20px;padding-bottom:10px;height:27px;border-bottom:solid 1px #dcdcdc;overflow: hidden;}
-  .lx-head h1{float:left;margin-right:70px;color:#333;font-size:22px}
-  .lx-tabitems{float:left;margin-top:5px}
-  .lx-tabitems li{position:relative;float:left;width:51px;color:#666;margin-right:10px;text-align:center;font-size:14px;cursor:pointer}
-  .lx-tabitems li.active{color:#c13232}
-  .lx-tabitems li.active em{position:absolute;bottom:-14px;left:0;display:block;width:51px;height:2px;background:#c13232}
-  .gw-items li{float:left;margin-right:20px;margin-bottom:10px;padding-bottom:14px;width:385px;*width:380px;width:380px\0;border-bottom:solid 1px #dcdcdc}
-  .gw-topitems{position:relative;overflow:hidden;margin-bottom:20px;box-shadow:0 3px 5px #e2e5e6;background:#f1f4f6;}
-  .gw-topitems li{margin-right:0;margin-bottom:0;padding-top:10px;width:400px;border-bottom:none;background-color:#f1f4f6;}
-  .triangle{position:absolute;top:0;right:0;width:0;height:0;border-top:20px solid #c13232;border-left:20px solid transparent}
-  .gw-topitems .gw-people{margin-left:20px}
-  .gw-topitems .gw-news{ margin-right: 16px;}
-  .gw-items{ width: 1200px;display: inline-block;}
-  .gw-items li:nth-child(3n){margin-right:0}
-  .gw-people{position:relative;float:left;margin-left:20px}
-  .lx-groupitems .gw-people a{
-    background-position:0 0;
-    background-position:-18px -18px\0;
-  }
-  :root .lx-groupitems .gw-people a{background-position:0 0\0;}
-  .gw-people img{width:51px;height:51px;-webkit-border-radius:50%;border-radius:50%}
-  .gw-people span{color:#333;font-size:14px;margin-top: 15px;display: inline-block;margin-left: 10px;}
-  .gw-people .pepple-icon > i{ vertical-align:middle; display:inline-block;width: 20px;height: 20px; background:url(../assets/img/1v.png) no-repeat;background-position:right center}
-  .gw-items p{color:#333;font-size:16px;padding-top: 10px;text-indent: 20px;}
-  .gw-legend{float:right;margin-top:18px;padding:2px 8px;-webkit-border-radius:8px;border-radius:8px;background:#f9f6f1;color:#c13232;font-size:12px}
-  .gw-news{width:76px;height:20px;-webkit-border-radius:10px;border-radius:10px;background-color:#ff8547;color:#fff;text-align:center;line-height:20px}
-  .gw-people .bg-peopel,.gw-people a{float:left;height: 51px; width: 51px;border-radius: 50%;-webkit-border-radius:50%;}
-  #guItems li:nth-child(3) .gw-people{margin-left: 26px;}
-  .home-guanggao a{float: left;margin-right: 20px;background-color: #dcdcdc;}
-  /* .home-guanggao a:nth-of-type(3){ margin-right: 0;}
-  .home-guanggao a:last-child{ margin-right: 0;} */
-  .lx-head a{ font-size: 12px;color: #c13232;float: right;margin-top: 5px}
-</style>
-{% for floor in shouye %} {#国家#}
-  {% for type in  floor.list %}{#类别#}
-  <div class="lx-groupitems" {% if loop.index == 1 %} style="display:block;" {% else %} style="display:none;" {% endif %}><!--推荐-->
-    {% for line in type.list %} {#行数#}
+ <div class="lx-groupitems">
+    {% for line in edu_item.list %} {#行数#}
     {% if loop.index == 1 %} {#第一行#}
     <ul class="gw-items gw-topitems" id="guItems">
       {% for item in line %}
@@ -77,17 +40,5 @@
     {% endif %}
     {% endfor %}
   </div>
-  {% endfor %}{#类别end#}
-<div class="dui-layout-lg clearfix" style="margin-top:5px;width:1200px;">
-  <div class="home-guanggao" style="float:left;overflow:hidden;margin-right:-20px" id="AD_HOME_SEAT{{loop.index+10}}"></div>
-</div>
-{% endfor %} {#国家end#}
-<script>
-  $(".lxContaniner").on('click', '.lx-tabitems li', function(){
-    var cur_index=$(this).index();
-    $(this).addClass('active').siblings().removeClass('active')
-    $(this).parents(".lxContaniner").find('.lx-groupitems').hide().eq(cur_index).show();
-  })
-</script>
 
 
