--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -98,11 +98,13 @@
 		<div class="home-guanggao" style="float:left;overflow:hidden;margin-right:-20px">
 			{% for picitem in guanggao %}
 			{% if helper.adseatCompare(picitem.ad_seat,ad_seat_index) %}
-				{% for ad_pic in picitem.setting %}
-				<a rel="nofollow" data-pid="{{ad_pic.pid}}" data-seat="{{ad_seat_index}}"  href="{{ad_pic.linkurl}}" target="_blank">
-					<img src='{{ad_pic.imageurl}}' alt='{{picitem.alt}}' style="width:386px;height:120px"/>
-				</a>
-				{% endfor %}
+					{% for ad_pic in picitem.setting %}
+						{% if loop.index <= 3%}
+						<a rel="nofollow" data-pid="{{ad_pic.pid}}" data-seat="{{ad_seat_index}}"  href="{{ad_pic.linkurl}}" target="_blank">
+							<img src='{{ad_pic.imageurl}}' alt='{{picitem.alt}}' style="width:386px;height:120px"/>
+						</a>
+						{% endif %}
+					{% endfor %}
 			{% endif %}
 			{% endfor %}
 		</div>
