--- a/views/widget/liuxue_item/liuxue_item_nunjucks.html
+++ b/views/widget/liuxue_item/liuxue_item_nunjucks.html
@@ -1,4 +1,4 @@
- <div class="lx-groupitems">
+ <div class="lx-groupitems" data-id="{{edu_item.edu_id}}">
     {% for line in edu_item.list %} {#行数#}
     {% if loop.index == 1 %} {#第一行#}
     <ul class="gw-items gw-topitems" id="guItems">
