--- a/views/header_new.html
+++ b/views/header_new.html
@@ -14,7 +14,7 @@
   <!--[if lt IE 9]>
   <script src="{{helper.cdnhost}}/dep/js/html5.js"></script>
   <![endif]-->
-  <script  src="{{helper.cdnhost}}/dep/js/jquery.js"></script>
+  <script  src="{{helper.cdnhost}}/dep/js/jquery-11.1.js"></script>
   <script src="{{helper.cdnhost}}/dep/js/jquery.xdomainrequest.min.js"></script>
   <script src="{{helper.cdnhost}}/dep/js/jquery.cookie.js" ></script>
   <script src="{{helper.cdnhost}}/dep/js/dui.js"></script>
