--- a/views/about/canzan.html
+++ b/views/about/canzan.html
@@ -60,7 +60,7 @@
   var AD_PAGE_NAME = "COUNSELLER"; //设置页面对应的名字
 </script>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js"></script>-->
-<script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_liuxue_search.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_ninth.js"></script>
