--- a/views/about/culture.html
+++ b/views/about/culture.html
@@ -51,7 +51,7 @@
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js" ></script>-->
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script>
   $('.branch-lunbo-slider .slider').xSlider({
     //轮播图配置
