--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -134,7 +134,7 @@
 <script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan_zhuye.js"></script>
 <!--<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>-->
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 {% if userinfo.usertype==3 %}
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 {% else %}
