--- a/views/center_case.html
+++ b/views/center_case.html
@@ -165,7 +165,7 @@
   <script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
   <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+  <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
   <script>
     $(function() {
         $('.banner-box-left .slider').xSlider({
