--- a/views/center_photo.html
+++ b/views/center_photo.html
@@ -171,7 +171,7 @@
   <script  src="{{helper.cdnhost}}/assets/js/upload_photoFile.js"></script>
   <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+  <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
   <script>
     $(function () {
         $('.banner-box-left .slider').xSlider({
