--- a/views/so_adviser_yimin.html
+++ b/views/so_adviser_yimin.html
@@ -112,7 +112,7 @@
 {{slide.leyu_slide(helper) }}
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/slide_yimin.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script>
     $(function () {
         //让分页器居中显示
