--- a/views/user_follow.html
+++ b/views/user_follow.html
@@ -120,7 +120,7 @@
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/select.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script>
     $(function () {
         $('.banner-box-left .slider').xSlider({
