--- a/views/about/lawyer.html
+++ b/views/about/lawyer.html
@@ -128,7 +128,7 @@
   var AD_PAGE_NAME = "COUNSELLER"; //设置页面对应的名字
 </script>
 <!--<script src="{{helper.cdnhost}}/assets/js/common.js"></script>-->
-<script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_yimin_search.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/slide_yimin.js"></script>
