--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -187,7 +187,7 @@
   <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+  <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
   <script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
