--- a/views/center_case_detail.html
+++ b/views/center_case_detail.html
@@ -111,7 +111,7 @@
 <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/view_count_min.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+  <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script>
   $(function(){
       $('.banner-box-left .slider').xSlider({
