--- a/views/center_follow.html
+++ b/views/center_follow.html
@@ -132,7 +132,7 @@
 <script src="{{helper.cdnhost}}/assets/js/select.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script>
     $(function () {
         $('.banner-box-left .slider').xSlider({
