--- a/views/center_main.html
+++ b/views/center_main.html
@@ -210,7 +210,7 @@
 <script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script>
     $(function () {
         $('.banner-box-left .slider').xSlider({
