--- a/views/center_post_code.html
+++ b/views/center_post_code.html
@@ -252,7 +252,7 @@
 <script  src="{{helper.cdnhost}}/assets/js/upload_wx_code.js"></script>
 <script  src="{{helper.cdnhost}}/assets/js/upload_qq_code.js"></script>
 <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
 <script>
     $('.banner-box-left .slider').xSlider({
         //轮播图配置
