--- a/views/release_article.html
+++ b/views/release_article.html
@@ -222,7 +222,7 @@
   <script src="{{helper.cdnhost}}/dep/js/layer.min.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
+  <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
   <script >
     $(function(){
         $('.banner-box-left .slider').xSlider({
