--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -329,7 +329,7 @@
       mask_div.style.lineHeight='80px';
       mask_div.style.display = "block";
       oTemp.appendChild(mask_div);
-      document.getElementById('get-share-img').getElementsByTagName('p')[0].appendChild(oTemp);
+      document.getElementById('get-share-img').appendChild(oTemp);
     }
   </script>
 </body>
