轮播图点的修改

--- a/views/about/activity_detail.html
+++ b/views/about/activity_detail.html
@@ -78,9 +78,6 @@
     background: #dcdcdc;
     height: 130px;
   }
-  .slider .slider-dot ul{
-    left:95%;
-  }
   .slider .slider-dot ul li{
     border-radius: 50%;
   }
@@ -192,7 +189,8 @@
     current: 0,
     speed: 500,
     intervalTime: 5000,
-    pagination: true
+    pagination: true,
+    dotPostion:'right'
   });
   $('.banner-box-right .slider').xSlider({
     //轮播图配置
