--- a/views/adviser_hot.html
+++ b/views/adviser_hot.html
@@ -131,7 +131,8 @@
       current: 0,
       speed: 500,
       intervalTime: 5000,
-      pagination: true
+      pagination: true,
+      dotPostion:'right'
     });
     $('.banner-box-right .slider').xSlider({
       //轮播图配置
