--- a/views/center_message.html
+++ b/views/center_message.html
@@ -22,9 +22,6 @@
         width:100%;
         height:100%;
     }
-    .banner-box-right .slider .slider-dot ul{
-        left: 50%;
-    }
 </style>
 <body style="background: #f5f5f5">
 {% include "widget/top/top.html" %}
@@ -116,7 +113,8 @@
             current: 0,
             speed: 500,
             intervalTime: 5000,
-            pagination: true
+            pagination: true,
+            dotPostion:'right'
         });
         $('.banner-box-right .slider').xSlider({
             //轮播图配置
