--- a/views/edit_article_yimin.html
+++ b/views/edit_article_yimin.html
@@ -330,7 +330,8 @@
           current: 0,
           speed: 500,
           intervalTime: 5000,
-          pagination: true
+          pagination: true,
+          dotPostion:'right'
       });
       $('.banner-box-right .slider').xSlider({
           current: 0,
