--- a/views/so_adviser.html
+++ b/views/so_adviser.html
@@ -25,9 +25,6 @@
         background: #dcdcdc;
         height: 130px;
     }
-    .slider .slider-dot ul{
-        left:95%;
-    }
     .slider .slider-dot ul li{
         border-radius: 50%;
     }
@@ -121,7 +118,8 @@
             current: 0,
             speed: 500,
             intervalTime: 5000,
-            pagination: true
+            pagination: true,
+            dotPostion:'right'
         });
         $('.banner-box-right .slider').xSlider({
             //轮播图配置
