--- a/views/user_follow.html
+++ b/views/user_follow.html
@@ -33,12 +33,6 @@
         background: #dcdcdc;
         height: 130px;
     }
-    .slider .slider-dot ul{
-        left:95%;
-    }
-    .banner-box-right .slider .slider-dot ul{
-        left: 50%;
-    }
     .slider .slider-dot ul li{
         border-radius: 50%;
     }
@@ -129,7 +123,8 @@
             current: 0,
             speed: 500,
             intervalTime: 5000,
-            pagination: true
+            pagination: true,
+            dotPostion:'right'
         });
         $('.banner-box-right .slider').xSlider({
             //轮播图配置
