--- a/views/user_information.html
+++ b/views/user_information.html
@@ -59,12 +59,6 @@
       background: #dcdcdc;
       height: 130px;
     }
-    .slider .slider-dot ul{
-      left:95%;
-    }
-    .banner-box-right .slider .slider-dot ul{
-      left: 50%;
-    }
     .slider .slider-dot ul li{
       border-radius: 50%;
     }
@@ -163,7 +157,8 @@
           current: 0,
           speed: 500,
           intervalTime: 5000,
-          pagination: true
+          pagination: true,
+          dotPostion:'right'
       });
       $('.banner-box-right .slider').xSlider({
           //轮播图配置
